--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "up": "yarn-upgrade-all"
   },
   "dependencies": {
-    "aws-sdk": "^2.1219.0",
+    "@types/moment": "^2.13.0",
+    "aws-sdk": "^2.1223.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
     "filesize": "^9.0.11",
-    "framer-motion": "^7.3.5",
+    "framer-motion": "^7.3.6",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "multer-s3": "^3.0.1",
     "next": "^12.3.1",
     "os": "^0.1.2",
@@ -29,7 +31,7 @@
     "react-fullscreen-image": "^0.0.3",
     "react-icons": "^4.4.0",
     "react-medium-image-zoom": "^5.0.3",
-    "react-router-dom": "^6.4.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
@@ -37,8 +39,8 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.185",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.20",
+    "@types/node": "^18.7.19",
+    "@types/react": "^18.0.21",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
